# contracts

./: .gitignore  Blockchain  Compiler  DockerfilePytester  README.md  Tester  package-lock.json  package.json  pyproject.toml  truffle-config.js
contracts/: DMNK.sol  FavNumber.sol  Game.sol  GameInstance.sol  Gateway.sol  Structs.sol  Types.sol
migrations/: 1_deploy.js  1_deploy_DMNK.js  1_deploy_Gateway.js
public/: DMNK.json  GameInstance.json  extra.css  index.html  info.json
src/: App.tsx  constants.ts  index.css  index.tsx
src/components/: CreatWalletModal.tsx  CreateGameModal.tsx  MainMenu.tsx  Navbar.tsx  WaitScreens.tsx  common.css  common.ts
src/components/board/: Board.css  Board.tsx
src/components/game/: Board.css  Board.tsx
src/components/navbar/: CreateWallet.tsx  Navbar.tsx
src/stories/: AccountIsNotAvailable.stories.tsx  Board.stories.tsx  MainMenu.stories.tsx  Navbar.stories.tsx  NewGameBeingCreated.stories.tsx  WaitingForPlayResponse.stories.tsx
tests/: Blockchain  DockerfileBlockchain  DockerfileCompiler  Tester  conftest.py  deploy.sh  docker-compose-localnet.yml  docker-compose-publicnet.yml  docker-compose.yml  runtest.sh  test_basics.py  test_moves.py  truffle-config.js
tests/envs/: harmony_testnet_template.env  localnet.env  matic_testnet_template.env
tests/tests/: conftest.py  test_check.py  test_create_join.py  test_gameplay.py
