[tool.poetry]
name = "dmnk"
version = "0.1.0"
description = ""
authors = ["magniff <tinysnippets@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
web3 = {git = "https://github.com/ethereum/web3.py.git", rev = "master"}
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest-sugar = "^0.9.5"
pytest-rerunfailures = "^10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
